# django-shibboleth-ds

./: .gitignore  .travis.yml  LICENSE  README.rst  setup.cfg  tox.ini
.github/workflows/: tests.yml
shibboleth_discovery/: __init__.py  conf.py  helpers.py  mixins.py  urls.py  utils.py  views.py
shibboleth_discovery/management/commands/: update_shib_ds_cache.py
shibboleth_discovery/template_tags/: shibboleth_discovery.py
tests/: conftest.py  test_commands.py  test_mixins.py  test_templatetags.py  test_utils.py  test_views.py
tests/testapp/: settings.py  urls.py  views.py
