[metadata]
name = django-shibboleth-ds
description = Django Shibboleth Discovery Service
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Stefan Beck
author_email = stefan.beck@ulb.tu-darmstadt.de
classifiers =
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0

[options]
include_package_data = True
install_requires =
    django>=2.2
    django-appconf
    requests
packages = shibboleth_discovery
python_requires = >=3.5
setup_requires =
    setuptools_scm
